force-app/main/default/objects/sffr_3party_segment__c/sffr_3party_segment__c.object-meta.xml
<CustomObject>
    <label>Third Party Segment</label>
    <nameField>
        <displayFormat>TPS-{0000}</displayFormat>
        <label>Third Party Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>