force-app/main/default/objects/sffr_3party_segment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Third Party Segments</relationshipLabel>
    <relationshipName>Third_Party_Segments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>