force-app/main/default/objects/SFFR_3party_Segment__c/fields/SFFR_Description__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>