force-app/main/default/objects/sffr_3party_segment__c/fields/sffr_external_description__c.field-meta.xml
<CustomField>
    <fullName>sffr_external_description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>