force-app/main/default/objects/sffr_3party_segment__c/fields/sffr_external_id__c.field-meta.xml
<CustomField>
    <fullName>sffr_external_id__c</fullName>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>