force-app/main/default/objects/SFFR_3party_Segment__c/fields/SFFR_External_Key__c.field-meta.xml
<CustomField>
    <fullName>SFFR_External_Key__c</fullName>
    <inlineHelpText>Designates the segment reference of a third party provider.</inlineHelpText>
    <label>External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>