force-app/main/default/objects/SFFR_3party_Segment__c/fields/SFFR_Supplier__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Lookup to the Supplier Account providing the contacts.</inlineHelpText>
    <label>Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Third Party Segments</relationshipLabel>
    <relationshipName>Third_Party_Segments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>