force-app/main/default/objects/sffr_3party_segment__c/fields/sffr_type__c.field-meta.xml
<CustomField>
    <fullName>sffr_type__c</fullName>
    <label>sffr_type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>