force-app/main/default/objects/SFFR_3party_Segment__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Third Party Segments</relationshipLabel>
    <relationshipName>Third_Party_Segments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>